# StudentDataManagementSystem

./: .gitignore  README.md  grpcMock.js  jest.config.js  package-lock.json  package.json  requirements.txt  testing.ipynb  tsconfig.json
back-end/src/: LICENSE.txt  backend_pb2.py  backend_pb2.pyi  backend_pb2_grpc.py  client.py  pyproject.toml  server.py
back-end/src/sdms_server/: server.py
back-end/src/sdms_server/api/: api.py
back-end/src/sdms_server/authentication/: authentication.py
back-end/src/sdms_server/authorization/: decorator.py  permission.py
back-end/src/sdms_server/database/: db.py
back-end/src/sdms_server/exceptions/: exceptions.py
back-end/src/sdms_server/notify/: email_notify.py
back-end/src/sdms_server/server_grpc/: backend_pb2_grpc.py
back-end/src/sdms_server/server_grpc/protos/: backend.proto
back-end/src/sdms_server/validation/: validation.py
backend-js/: app.js  package-lock.json  package.json
client/: package-lock.json  package.json  tsconfig.json
coverage/: clover.xml
coverage-ts/: index.html  typescript-coverage.json
data/: credentials.yml  dummy_courses.jsonl  dummy_students.jsonl  dummy_users.csv  dummy_users.jsonl
front-end/: package-lock.json  package.json
grpc_test/: backend_pb2.py  backend_pb2.pyi  backend_pb2_grpc.py  client.py  create_protos.sh  dummy_server.py  server.py
newfolder/: backend_pb2.py  backend_pb2.pyi  backend_pb2_grpc.py  client.py  server.py
src/: courses.py  department.py  dummy_server.py  user.py  users.py
tests/: academicMain.test.tsx  authentication_test.py  browseCourses.test.tsx  (+13 more)
(+194 files in other folders)
