[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdms-server"
version = "0.0.1"
dependencies = [
    "pymongo",
    "pandas",
    "bcrypt",
    "argon2-cffi",
    "pyjwt",
    "python-dotenv",
    "grpcio-tools",
    "ortools"]
requires-python = ">=3.8"
authors = [
    {name = "Quad-Coders"},
    {name = "Lakshita Bhargava", email = "lbhargava@umass.edu"},
    {name = "Kartik Choudhary", email = "kartikchoudh@umass.edu"},
    {name = "Shreeya Patil", email = "email@example.com"},
    {name = "Apoorva Rajan", email = "email@example.com"}]
description = "Backend server for the Student Data Management System"
readme = "README.rst"
license = {file = "LICENSE.txt"}
keywords = ["Student Management", "Academics", "COMPSCI 520"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
server-cli = "sdms_server:server"
